Bug 33016 - [i915] Driver version 2.14.0 does not work with kernel 2.6.32.28
Summary: [i915] Driver version 2.14.0 does not work with kernel 2.6.32.28
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-12 00:38 UTC by Torsten Hilbrich
Modified: 2011-01-12 04:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Xorg configuration file (2.51 KB, text/plain)
2011-01-12 00:38 UTC, Torsten Hilbrich
no flags Details
Xorg log file containing the error message (394.92 KB, text/plain)
2011-01-12 00:39 UTC, Torsten Hilbrich
no flags Details

Description Torsten Hilbrich 2011-01-12 00:38:31 UTC
Created attachment 41901 [details]
Xorg configuration file

The current version of the driver (2.14.0) no longer works with the kernel 2.6.32.28. The previously tested version (2.13.0) used to work without problems in the otherwise identical environment. The driver 2.14.0 also works when the kernel 2.6.37 is used instead.

Kernel: 2.6.32.28, compiled for 32bit
Xorg Server: 1.7.1
Hardware: Lenovo T-410 (Type 2537-VX9)
Graphic;: Intel Corporation Core Processor Integrated Graphics Controller (rev 02)
Driver: i915

I hope the attached log file from the Xorg server contains all other information.

The kernel logs contains the following lines regarding the i915/drm drivers:

=============== dmesg ==================================
[drm] Initialized drm 1.1.0 20060810
i915 0000:00:02.0: power state changed by ACPI to D0
i915 0000:00:02.0: power state changed by ACPI to D0
  alloc irq_desc for 16 on node -1
  alloc kstat_irqs on node -1
i915 0000:00:02.0: PCI INT A -> GSI 16 (level, low) -> IRQ 16
i915 0000:00:02.0: setting latency timer to 64
  alloc irq_desc for 32 on node -1
  alloc kstat_irqs on node -1
i915 0000:00:02.0: irq 32 for MSI/MSI-X
[drm] set up 31M of stolen space
firewire_core: created device fw0: GUID f0def1ff0e0d0eff, S400
[drm] LVDS-8: set mode 1440x900 c
Console: switching to colour frame buffer device 180x56
fb0: inteldrmfb frame buffer device
registered panic notifier
[drm] Initialized i915 1.6.0 20080730 for 0000:00:02.0 on minor 0
==========================================================

============ Kernel configuration (KMS/DRM) ===============
CONFIG_DRM_KMS_HELPER=m
# CONFIG_DRM_I915_KMS is not set
CONFIG_DRM=m
CONFIG_DRM_KMS_HELPER=m
CONFIG_DRM_TTM=m
# CONFIG_DRM_TDFX is not set
CONFIG_DRM_R128=m
CONFIG_DRM_RADEON=m
CONFIG_DRM_I810=m
CONFIG_DRM_I830=m
CONFIG_DRM_I915=m
# CONFIG_DRM_I915_KMS is not set
CONFIG_DRM_MGA=m
CONFIG_DRM_SIS=m
# CONFIG_DRM_VIA is not set
# CONFIG_DRM_SAVAGE is not set
==========================================================

Sympton of the problem are:

- the X server is starting
- backlight is on, mouse pointer is displayed
- screen is otherwise completely black
- the following error message is repeated in the logs and on stderr:

(EE) intel(0): Failed to submit batch buffer, expect rendering corruption or even a frozen display: No such device.

I will attach both the xorg.conf and the xorg log file.
Comment 1 Torsten Hilbrich 2011-01-12 00:39:17 UTC
Created attachment 41902 [details]
Xorg log file containing the error message
Comment 2 Chris Wilson 2011-01-12 03:00:53 UTC
libdrm commit 6717b7579f84d05e45e7846d2b6e767760461709
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Jan 12 10:57:46 2011 +0000

    intel: Fallback to old exec if no mrb_exec is available
    
    Reported-by: Torsten Hilbrich <torsten.hilbrich@secunet.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=33016
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Torsten Hilbrich 2011-01-12 04:02:57 UTC
I wonder where I can find this commit?
Comment 4 Chris Wilson 2011-01-12 04:09:21 UTC
libdrm. For a change I even said which project I applied the commit to! ;-)
Comment 5 Torsten Hilbrich 2011-01-12 04:14:51 UTC
I'm was asking because I couldn't find this commit in git://anongit.freedesktop.org/git/mesa/drm

Is this the correct repository?
Comment 6 Chris Wilson 2011-01-12 04:16:39 UTC
Good job you checked... The push failed on the first try and I forgot to send it again after updating...
Comment 7 Torsten Hilbrich 2011-01-12 04:30:56 UTC
I can confirm that your patch applied to libdrm 2.4.23 fixes the bug.

Thanks for the quick and good support.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.